# fastapi-portfolio

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  init_db.sh  main.py  pyproject.toml  requirements.txt  serve.py
app/: db.py  handlers.py  main.py  schemas.py  services.py  settings.py
migrations/: env.py
migrations/versions/: 1fc7de048962_.py  864e12da1b19_refactored_user_id_type_and_server_.py  e1bec45ad896_create_user_table.py
tests/: test_check.py
tests/integration/: conftest.py  test_user_handlers.py
